--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shop",
   "version": "0.1.0",
+  "homepage": "https://torto1se.github.io/shop",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
